<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_bar_home"/>
    <item
        android:id="@+id/mapsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_bar_map"/>
    <item
        android:id="@+id/scheduleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_bar_schedule"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_bar_settings"/>

</menu>