<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main.SummaryFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_summary"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="top|center"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/new_trip"
        android:textAlignment="center"
        android:textSize="35sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_summary_trip_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="top"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_summary_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner_trip_mode_layout"
        android:labelFor="@+id/spinner_trip_mode"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="175dp"
        android:hint="@string/label_spinner_mode">

        <AutoCompleteTextView
            android:id="@+id/spinner_trip_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_summary_points"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:keyboardNavigationCluster="true"
        android:background="@drawable/custom_border"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom|center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_summary_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:text="@string/create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_summary_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    </LinearLayout>

</FrameLayout>