<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:id="@+id/tv_item_point_schedule_name"
        android:gravity="top|center"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/point_name" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_item_point_schedule_duration_layout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:suffixText="m"
            android:hint="@string/time_spent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_item_point_schedule_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:inputType="number"
            />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_schedule_point_type_layout"
            android:labelFor="@+id/spinner_schedule_point_type"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/trip_step_type"
            android:layout_width="125dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/spinner_schedule_point_type"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    </LinearLayout>


</FrameLayout>